# decentralized-messenger

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
cmd/messenger/: main.go  main_test.go
docker/: Dockerfile
docs/: api.md  architecture.md
internal/api/: server.go  server_test.go
internal/broker/: broker.go  broker_test.go  rabbitmq.go
internal/cache/: cache.go  cache_test.go  redis.go
internal/chatlog/: log.go  log_test.go
internal/crypto/: encrypt.go  encrypt_test.go  keys.go  keys_test.go
internal/merkle/: tree.go  tree_test.go
internal/models/: id.go  message.go  message_test.go
internal/ratelimit/: limiter.go  limiter_test.go
internal/service/: id.go  messenger.go  messenger_test.go
internal/storage/: scylla.go  storage.go
src/decentralized_messenger/: __init__.py
src/decentralized_messenger/api/: __init__.py
src/decentralized_messenger/broker/: __init__.py
src/decentralized_messenger/cache/: __init__.py
src/decentralized_messenger/crypto/: __init__.py  keys.py
src/decentralized_messenger/log/: __init__.py
src/decentralized_messenger/merkle/: __init__.py  tree.py
src/decentralized_messenger/models/: message.py
src/decentralized_messenger/storage/: __init__.py
tests/: test_crypto.py  test_merkle.py  test_models.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  setupTests.ts
web/src/api/: client.test.ts  client.ts  stream.test.ts  stream.ts  types.ts
web/src/chat/: ChatView.test.tsx  ChatView.tsx  ContentKeyPanel.test.tsx  ContentKeyPanel.tsx  MediaMessage.test.tsx  MediaMessage.tsx  contentKey.test.ts  contentKey.ts  useChat.test.ts  useChat.ts  useContentKey.test.ts  useContentKey.ts
web/src/crypto/: aesgcm.test.ts  aesgcm.ts  base64.test.ts  (+6 more)
(+6 files in other folders)
