[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decentralized-messenger"
version = "0.1.0"
description = "Decentralized messenger with cryptographic message verification using Ed25519 signatures, append-only logs, and Merkle trees"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Artem Kornilov", email = "artemijkornilov2@gmail.com" }]
keywords = ["messenger", "cryptography", "ed25519", "merkle-tree", "decentralized"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "redis[asyncio]>=5.0.0",
    "aio-pika>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/Artem-Kornilov-pro/decentralized-messenger"
Repository = "https://github.com/Artem-Kornilov-pro/decentralized-messenger"
Issues = "https://github.com/Artem-Kornilov-pro/decentralized-messenger/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/decentralized_messenger"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
